Update package infrastructure files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Depends: R (>= 3.5.0)
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.2
 Imports: 
     stringr,
     deSolve,
@@ -20,7 +20,10 @@ Imports:
     stats,
     utils,
     plyr,
-    dplyr
+    dplyr,
+    magrittr,
+    rlang,
+    mvtnorm
 Suggests: 
     knitr,
     readr,
